--- a/springPractice/src/main/resources/application.yml
+++ b/springPractice/src/main/resources/application.yml
@@ -3,15 +3,15 @@ spring:
     name: demo
 
   datasource:
-    url: ${DB_URL}
+    url: jdbc:mariadb://10.10.10.100:3306/product
     driver-class-name: org.mariadb.jdbc.Driver
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: root
+    password: qwer1234
 
   jpa:
     database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: trued
