--- a/springPractice/build.gradle
+++ b/springPractice/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
 
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor('org.projectlombok:lombok')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
